@@ -124,9 +124,9 @@ class DirectionsQuestionnaireGeneratorTest {
     private static final String HNL_FILE_NAME_DEFENDANT = format(DQ_RESPONSE_1V1.getDocumentTitle(), "defendant", REFERENCE_NUMBER);
     private static final String FILE_NAME_CLAIMANT = format(DQ_RESPONSE_1V1.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
     private static final String HNL_FILE_NAME_CLAIMANT = format(DQ_RESPONSE_1V1.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
-    private static final String HNL_FILE_NAME_CLAIMANT_1v2 = format(DQ_RESPONSE_1V2_DS.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
-    private static final String FILE_NAME_CLAIMANT_1v2 = format(DQ_RESPONSE_1V2_DS_FAST_TRACK_INT.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
-    private static final String FILE_NAME_CLAIMANT_1v2SS = format(DQ_RESPONSE_1V2_SS_FAST_TRACK_INT.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
+    private static final String HNL_FILE_NAME_CLAIMANT_1V2 = format(DQ_RESPONSE_1V2_DS.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
+    private static final String FILE_NAME_CLAIMANT_1V2 = format(DQ_RESPONSE_1V2_DS_FAST_TRACK_INT.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
+    private static final String FILE_NAME_CLAIMANT_1V2_SS = format(DQ_RESPONSE_1V2_SS_FAST_TRACK_INT.getDocumentTitle(), "claimant", REFERENCE_NUMBER);
     private static final CaseDocument CASE_DOCUMENT_DEFENDANT =
         CaseDocumentBuilder.builder()
             .documentName(FILE_NAME_DEFENDANT)
@@ -455,7 +455,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 when(documentGeneratorService.generateDocmosisDocument(any(MappableObject.class), eq(DQ_RESPONSE_1V2_SS_FAST_TRACK_INT)))
                     .thenReturn(new DocmosisDocument(DQ_RESPONSE_1V2_SS_FAST_TRACK_INT.getDocumentTitle(), bytes));
                 when(documentManagementService.uploadDocument(
-                    BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1v2SS, bytes, DIRECTIONS_QUESTIONNAIRE))
+                    BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1V2_SS, bytes, DIRECTIONS_QUESTIONNAIRE))
                 ).thenReturn(CASE_DOCUMENT_CLAIMANT);
 
                 CaseData caseData = CaseDataBuilder.builder()
@@ -471,7 +471,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 assertThat(caseDocument).isNotNull().isEqualTo(CASE_DOCUMENT_CLAIMANT);
 
                 verify(documentManagementService)
-                    .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1v2SS, bytes, DIRECTIONS_QUESTIONNAIRE));
+                    .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1V2_SS, bytes, DIRECTIONS_QUESTIONNAIRE));
                 verify(documentGeneratorService).generateDocmosisDocument(any(DirectionsQuestionnaireForm.class),
                     eq(DQ_RESPONSE_1V2_SS_FAST_TRACK_INT)
                 );
@@ -482,7 +482,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 when(documentGeneratorService.generateDocmosisDocument(any(MappableObject.class), eq(DQ_RESPONSE_1V2_DS_FAST_TRACK_INT)))
                     .thenReturn(new DocmosisDocument(DQ_RESPONSE_1V2_DS_FAST_TRACK_INT.getDocumentTitle(), bytes));
                 when(documentManagementService.uploadDocument(
-                    BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1v2, bytes, DIRECTIONS_QUESTIONNAIRE))
+                    BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1V2, bytes, DIRECTIONS_QUESTIONNAIRE))
                 ).thenReturn(CASE_DOCUMENT_CLAIMANT);
 
                 CaseData caseData = CaseDataBuilder.builder()
@@ -503,7 +503,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 assertThat(caseDocument).isNotNull().isEqualTo(CASE_DOCUMENT_CLAIMANT);
 
                 verify(documentManagementService)
-                    .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1v2, bytes, DIRECTIONS_QUESTIONNAIRE));
+                    .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_CLAIMANT_1V2, bytes, DIRECTIONS_QUESTIONNAIRE));
                 verify(documentGeneratorService).generateDocmosisDocument(any(DirectionsQuestionnaireForm.class),
                     eq(DQ_RESPONSE_1V2_DS_FAST_TRACK_INT)
                 );
@@ -904,6 +904,11 @@ class DirectionsQuestionnaireGeneratorTest {
                 dq.setRespondToCourtLocation(null);
                 caseData.setRespondent1DQ(dq);
                 DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
+
+                verify(representativeService).getRespondent1Representative(caseData);
+                assertThat(templateData).isNotNull();
+                assertThat(templateData.getRequestedCourt().getCaseLocation()).isNull();
+                assertThat(templateData.getRequestedCourt().getRequestHearingAtSpecificCourt()).isEqualTo(NO);
             }
 
             @Test
@@ -915,6 +920,10 @@ class DirectionsQuestionnaireGeneratorTest {
                 dq.setRespondent1DQExperts(null);
                 caseData.setRespondent1DQ(dq);
                 DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
+
+                verify(representativeService).getRespondent1Representative(caseData);
+                assertThat(templateData).isNotNull();
+                assertThat(templateData.getExperts().getExpertRequired()).isEqualTo(NO);
             }
 
             @Test
@@ -938,7 +947,7 @@ class DirectionsQuestionnaireGeneratorTest {
                 caseData.getRespondent1DQ().setRespondent1DQExperts(experts);
                 DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
 
-                Expert extracted = templateData.getExperts().getDetails().get(0);
+                Expert extracted = templateData.getExperts().getDetails().getFirst();
                 assertThat(extracted.getName()).isEqualTo(expert1.getName());
                 assertThat(extracted.getFieldOfExpertise()).isEqualTo(expert1.getFieldOfExpertise());
                 assertThat(extracted.getWhyRequired()).isEqualTo(expert1.getWhyRequired());
@@ -1256,7 +1265,6 @@ class DirectionsQuestionnaireGeneratorTest {
                 caseData.setAllocatedTrack(AllocatedTrack.SMALL_CLAIM);
                 caseData.setResponseClaimTrack(SpecJourneyConstantLRSpec.SMALL_CLAIM);
                 caseData.setResponseClaimWitnesses(Integer.toString(2));
-                DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
 
                 assertThat(!caseData.isRespondent1NotRepresented()).isFalse();
             }
@@ -1447,22 +1455,11 @@ class DirectionsQuestionnaireGeneratorTest {
 
             private String getHearingLength(DQ dq) {
                 var hearing = dq.getHearing();
-                switch (hearing.getHearingLength()) {
-                    case LESS_THAN_DAY:
-                        return hearing.getHearingLengthHours() + " hours";
-                    case ONE_DAY:
-                        return "One day";
-                    default:
-                        return hearing.getHearingLengthDays() + " days";
-                }
-            }
-
-            private HearingSupport getSupportRequirements() {
-                HearingSupport hearingSupport = new HearingSupport();
-                hearingSupport.setRequirements(List.of());
-                hearingSupport.setSupportRequirements(YES);
-                hearingSupport.setSupportRequirementsAdditional("Additional support needed");
-                return hearingSupport;
+                return switch (hearing.getHearingLength()) {
+                    case LESS_THAN_DAY -> hearing.getHearingLengthHours() + " hours";
+                    case ONE_DAY -> "One day";
+                    default -> hearing.getHearingLengthDays() + " days";
+                };
             }
 
             private String getHearingSupport(DQ dq) {
@@ -1575,7 +1572,7 @@ class DirectionsQuestionnaireGeneratorTest {
             when(documentGeneratorService.generateDocmosisDocument(any(MappableObject.class), eq(DQ_RESPONSE_1V2_DS)))
                 .thenReturn(new DocmosisDocument(DQ_RESPONSE_1V2_DS.getDocumentTitle(), bytes));
             when(documentManagementService.uploadDocument(
-                BEARER_TOKEN, new PDF(HNL_FILE_NAME_CLAIMANT_1v2, bytes, DIRECTIONS_QUESTIONNAIRE))
+                BEARER_TOKEN, new PDF(HNL_FILE_NAME_CLAIMANT_1V2, bytes, DIRECTIONS_QUESTIONNAIRE))
             ).thenReturn(HNL_CASE_DOCUMENT_DEFENDANT);
 
             CaseData caseData = CaseDataBuilder.builder()
@@ -1596,7 +1593,7 @@ class DirectionsQuestionnaireGeneratorTest {
 
             verify(representativeService).getRespondent2Representative(caseData);
             verify(documentManagementService)
-                .uploadDocument(BEARER_TOKEN, new PDF(HNL_FILE_NAME_CLAIMANT_1v2, bytes, DIRECTIONS_QUESTIONNAIRE));
+                .uploadDocument(BEARER_TOKEN, new PDF(HNL_FILE_NAME_CLAIMANT_1V2, bytes, DIRECTIONS_QUESTIONNAIRE));
             verify(documentGeneratorService).generateDocmosisDocument(any(DirectionsQuestionnaireForm.class),
                 eq(DQ_RESPONSE_1V2_DS));
         }
@@ -1809,7 +1806,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1853,7 +1850,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1897,7 +1894,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1947,7 +1944,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "ONE"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -1991,7 +1988,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2046,7 +2043,7 @@ class DirectionsQuestionnaireGeneratorTest {
                     "TWO"
                 );
 
-                assertThat(caseDocument.get()).isEqualTo(CASE_DOCUMENT_DEFENDANT);
+                assertThat(caseDocument).contains(CASE_DOCUMENT_DEFENDANT);
 
                 verify(documentManagementService)
                     .uploadDocument(BEARER_TOKEN, new PDF(FILE_NAME_DEFENDANT, bytes, DIRECTIONS_QUESTIONNAIRE));
@@ -2411,14 +2408,11 @@ class DirectionsQuestionnaireGeneratorTest {
 
             private String getHearingLength(DQ dq) {
                 var hearing = dq.getHearing();
-                switch (hearing.getHearingLength()) {
-                    case LESS_THAN_DAY:
-                        return hearing.getHearingLengthHours() + " hours";
-                    case ONE_DAY:
-                        return "One day";
-                    default:
-                        return hearing.getHearingLengthDays() + " days";
-                }
+                return switch (hearing.getHearingLength()) {
+                    case LESS_THAN_DAY -> hearing.getHearingLengthHours() + " hours";
+                    case ONE_DAY -> "One day";
+                    default -> hearing.getHearingLengthDays() + " days";
+                };
             }
 
             private String getHearingSupport(DQ dq) {
@@ -2819,16 +2813,18 @@ class DirectionsQuestionnaireGeneratorTest {
                 .businessProcess(new BusinessProcess().setCamundaEvent("CLAIMANT_RESPONSE"))
                 .build();
 
-            String statementOfTruth = "The claimant believes that the facts in this claim are true."
-                + "\n\n\nI am duly authorised by the claimant to sign this statement.\n\n"
-                + "The claimant understands that the proceedings for contempt of court "
-                + "may be brought against anyone who makes, or causes to be made, "
-                + "a false statement in a document verified by a statement of truth "
-                + "without an honest belief in its truth.";
+            String statementOfTruth = String.join("",
+                "The claimant believes that the facts in this claim are true.",
+                "\n\n\nI am duly authorised by the claimant to sign this statement.",
+                "\n\nThe claimant understands that the proceedings for contempt of court ",
+                "may be brought against anyone who makes, or causes to be made, ",
+                "a false statement in a document verified by a statement of truth ",
+                "without an honest belief in its truth."
+            );
 
             DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
-            assertNotEquals(caseData.getCaseAccessCategory(), SPEC_CLAIM);
-            assertEquals(templateData.getStatementOfTruthText(), statementOfTruth);
+            assertNotEquals(SPEC_CLAIM, caseData.getCaseAccessCategory());
+            assertEquals(statementOfTruth, templateData.getStatementOfTruthText());
         }
 
         @Test
@@ -2846,16 +2842,18 @@ class DirectionsQuestionnaireGeneratorTest {
                 .businessProcess(new BusinessProcess().setCamundaEvent("DEFENDANT_RESPONSE"))
                 .build();
 
-            String statementOfTruth = "The defendant believes that the facts stated in the response are true."
-                + "\n\n\nI am duly authorised by the defendant to sign this statement.\n\n"
-                + "The defendant understands that the proceedings for contempt of court "
-                + "may be brought against anyone who makes, or causes to be made, "
-                + "a false statement in a document verified by a statement of truth "
-                + "without an honest belief in its truth.";
+            String statementOfTruth = String.join("",
+                "The defendant believes that the facts stated in the response are true.",
+                "\n\n\nI am duly authorised by the defendant to sign this statement.",
+                "\n\nThe defendant understands that the proceedings for contempt of court ",
+                "may be brought against anyone who makes, or causes to be made, ",
+                "a false statement in a document verified by a statement of truth ",
+                "without an honest belief in its truth."
+            );
 
             DirectionsQuestionnaireForm templateData = generator.getTemplateData(caseData, BEARER_TOKEN);
-            assertNotEquals(caseData.getCaseAccessCategory(), SPEC_CLAIM);
-            assertEquals(templateData.getStatementOfTruthText(), statementOfTruth);
+            assertNotEquals(SPEC_CLAIM, caseData.getCaseAccessCategory());
+            assertEquals(statementOfTruth, templateData.getStatementOfTruthText());
         }
     }
 }
